set up schedule builder
