# src/models/index.ts
@@ -11,7 +11,8 @@ export * from './Day';
 export * from './GroupPercentage';
 export * from './OtherActivity';
 export * from './PrimaryLiftActivity';
-export * from './Schedule';
+export * from './Program';
 export * from './User';
 export * from './Week';
+export * from './WeeklySchedule';
 export * from './ActivityGroup'; 
